# Actix-Diesel-Boilerplate

./: .env  .gitignore  Cargo.toml  README.md  table.sql
src/: main.rs  models.rs  schema.rs  user_helpers.rs
