[package]
name = "take2"
version = "0.1.0"
authors = ["sleepyboo <thunderlrod520@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.7.4"
actix-rt="1.0.0"
actix-web="2.0.0"
actix-web-actors = "3.0.0"
actix-files = "0.5.0"
serde = { version="1.0.104", features=["derive"] }
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "uuid"] }
dotenv = "0.15.0"
r2d2 = "0.8.9"
r2d2-diesel = "0.16.0"
uuid = { version = "0.6", features = ["serde", "v4"] }
rust-argon2 = "0.8.3"
serde_derive = "1.0.123"
fasthash = "0.4.0"